Ajout pages jaguard+python

--- a/pages/animaux/jungle/gorille.html
+++ b/pages/animaux/jungle/gorille.html
@@ -1,27 +1,30 @@
-<div>
+<div class="container">
     <div class="row row-cols-1 row-cols-lg-2">
         <div class="row">
-            <img class="img-fluid row-cols-lg-12 mx-auto" src="/images/animaux/jungle/Gorille.jpg"></img>
+            <img class="img-fluid row-cols-lg-12 p-4" src="/images/animaux/jungle/Gorille.jpg"></img>
         </div>
         <div class="text-justify text-secondary p-3">
             <H1>Le Gorille - Roi des Grands Singes</H1>
             <p>Le gorille est l'un des animaux les plus impressionnants du zoo Arcadia. Majestueux et imposant, 
             cet herbivore paisible incarne la puissance et la sagesse des grands singes.</p>
-            <h2>Caractéristiques du Gorille :</h2></br>
+            <h2>Caractéristiques du Gorille :</h2>
             <p>
-            Nom scientifique : Gorilla gorilla</br>
-            Habitat naturel : Forêts tropicales d'Afrique centrale et de l’ouest</br>
-            Taille : Entre 1,6 et 1,8 mètres de haut</br>
-            Poids : 140 à 200 kg pour les mâles, environ 100 kg pour les femelles</br>
-            Alimentation : Principalement herbivore, il se nourrit de feuilles, de fruits, de tiges et parfois d'insectes.</br>
-            Espérance de vie : Entre 35 et 40 ans en captivité</br>
-            Mode de vie : Les gorilles vivent en groupes appelés "troupes" dirigés par un mâle dominant appelé le "dos argenté", reconnaissable à la bande de poils argentés sur son dos.
-            Comportement</br>
-            Les gorilles sont des animaux sociaux qui communiquent à l’aide de sons, de gestes et de regards. Malgré leur apparence imposante, ce sont des créatures douces et intelligentes, 
+                <ul>
+                    <li>Nom scientifique : Gorilla gorilla</li>
+                    <li>Habitat naturel : Forêts tropicales d'Afrique centrale et de l'ouest</li>
+                    <li>Taille : Entre 1,6 et 1,8 mètres de haut</li>
+                    <li>Poids : 140 à 200 kg pour les mâles, environ 100 kg pour les femelles</li>
+                    <li>Alimentation : Principalement herbivore, il se nourrit de feuilles, de fruits, de tiges et parfois d'insectes.</li>
+                    <li>Espérance de vie : Entre 35 et 40 ans en captivité</li>
+                    <li>Mode de vie : Les gorilles vivent en groupes appelés "troupes" dirigés par un mâle dominant appelé le "dos argenté", reconnaissable à la bande de poils argentés sur son dos.</li>
+                </ul>
+            </p>
+            <h2>Comportement</h2>
+            <p>Les gorilles sont des animaux sociaux qui communiquent à l'aide de sons, de gestes et de regards. Malgré leur apparence imposante, ce sont des créatures douces et intelligentes, 
             qui passent la plupart de leur journée à se nourrir et à se reposer. Très protecteurs, les mâles veillent sur leur troupe, tandis que les femelles s’occupent de leurs petits. 
             Leur organisation sociale est primordiale à leur survie. 
             </p>
-            <h2>Conservation</h2></br>
+            <h2>Conservation</h2>
             <p>
             Le gorille fait face à de nombreuses menaces dans la nature, notamment la déforestation et le braconnage. Il est aujourd’hui classé comme une espèce en danger critique d'extinction 
             par l'Union internationale pour la conservation de la nature (UICN).
