Ajout des pages crocodile,hippopotame,tortue et ibis

--- a/pages/animaux/Savane/guepard.html
+++ b/pages/animaux/Savane/guepard.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row row-cols-1 row-cols-lg-2">
         <div class="row">
-            <img class="img-fluid row-cols-lg-12 p-4" src="/images/animaux/jungle/guepard.jpg"></img>
+            <img class="img-fluid row-cols-lg-12 p-4" src="/images/animaux/savane/Guépard.jpg"></img>
         </div>
         <div class="text-justify text-secondary p-3">
             <H1>Le Guépard - Le Sprinteur de la Savane</H1>
