--- a/pages/animaux/marais/crocodile.html
+++ b/pages/animaux/marais/crocodile.html
@@ -1,27 +1,31 @@
 <div class="container">
     <div class="row row-cols-1 row-cols-lg-2">
         <div class="row">
-            <img class="img-fluid row-cols-lg-12 p-4" src="/images/animaux/jungle/crocodile.jpg"></img>
+            <img class="img-fluid row-cols-lg-12 p-4" src="/images/animaux/marais/Crocodile.jpg"></img>
         </div>
         <div class="text-justify text-secondary p-3">
-            <H1></H1>
-            <p><p>
-            <h2>Caractéristiques du Zebre :</h2>   
+            <H1>Le Crocodile - Le Prédateur Ancien des Marais</H1>
+            <p>Le crocodile est l'un des plus anciens reptiles encore vivants aujourd'hui. Avec son apparence préhistorique, 
+                il incarne la force, la patience et la maîtrise de l'eau. Ce prédateur redoutable est capable de rester immobile pendant des heures avant d'attaquer brutalement sa proie.<p>
+            <h2>Caractéristiques du Crocodile :</h2>   
             <ul>
-                    <li>Nom scientifique : </li>
-                    <li>Habitat naturel : </li>
-                    <li>Taille : </li>
-                    <li>Poids : </li>
-                    <li>Alimentation : </li>
-                    <li>Espérance de vie : </li>
-                    <li>Mode de vie : </li>
+                    <li>Nom scientifique : Crocodylus niloticus (crocodile du Nil)</li>
+                    <li>Habitat naturel : Marais, rivières et lacs d'Afrique subsaharienne </li>
+                    <li>Taille : 4 à 6 mètres de long</li>
+                    <li>Poids : Jusqu'à 1 000 kg</li>
+                    <li>Alimentation : Carnivore, il se nourrit de poissons, oiseaux, et grands mammifères comme les antilopes ou les zèbres</li>
+                    <li>Espérance de vie : 70 à 100 ans</li>
                 </ul>
             </p>
             <h2>Comportement</h2>
-            <p>
+            <p>Les crocodiles sont des prédateurs patients, se camouflant dans l'eau et attendant que leur proie s'approche pour bondir avec une rapidité surprenante. 
+                Ils sont principalement actifs au crépuscule et la nuit, passant la majorité de la journée à se prélasser au soleil pour réguler leur température. 
+                Ce sont des chasseurs solitaires, bien qu'ils puissent parfois coopérer pour capturer de grandes proies. Leur morsure est l'une des plus puissantes 
+                du règne animal, utilisée pour entraîner leurs proies sous l'eau et les noyer.
             </p>
             <h2>Conservation</h2>
-            <p>
+            <p>Bien que le crocodile du Nil ne soit pas actuellement en danger, certaines espèces de crocodiles sont menacées par la perte de leur habitat et 
+                la chasse pour leur peau. Des efforts de conservation visent à protéger ces reptiles dans des réserves naturelles et à réguler le commerce de leurs produits dérivés.
             </p>
         </div>
     </div>
