--- a/pages/animaux/marais/hippopotame.html
+++ b/pages/animaux/marais/hippopotame.html
@@ -1,27 +1,32 @@
 <div class="container">
     <div class="row row-cols-1 row-cols-lg-2">
         <div class="row">
-            <img class="img-fluid row-cols-lg-12 p-4" src="/images/animaux/jungle/crocodile.jpg"></img>
+            <img class="img-fluid row-cols-lg-12 p-4" src="/images/animaux/marais/Hippopotame.jpg"></img>
         </div>
         <div class="text-justify text-secondary p-3">
-            <H1></H1>
-            <p><p>
-            <h2>Caractéristiques du Zebre :</h2>   
+            <H1>La Tortue - L'Ancienne Habitante des Rivières et des Lacs</H1>
+            <p>La tortue est un reptile lent mais résistant, connue pour sa carapace protectrice et son incroyable longévité. 
+                Elle est capable de s'adapter à différents environnements, des rivières aux marais en passant par les forêts tropicales.<p>
+            <h2>Caractéristiques de l'hippopotame :</h2>   
             <ul>
-                    <li>Nom scientifique : </li>
-                    <li>Habitat naturel : </li>
-                    <li>Taille : </li>
-                    <li>Poids : </li>
-                    <li>Alimentation : </li>
-                    <li>Espérance de vie : </li>
-                    <li>Mode de vie : </li>
+                    <li>Nom scientifique : Testudines (ordre des tortues, plusieurs espèces)</li>
+                    <li>Habitat naturel : Rivières, marais, lacs et forêts d'Afrique, d'Amérique et d'Asie</li>
+                    <li>Taille : 20 cm à 1 m selon les espèces</li>
+                    <li>Poids : 1 à 250 kg selon les espèces</li>
+                    <li>Alimentation : Omnivore ou herbivore, selon l'espèce. Certaines se nourrissent d'algues et de plantes aquatiques, d'autres d'insectes, poissons ou charognes.</li>
+                    <li>Espérance de vie : 50 à 100 ans</li>
                 </ul>
             </p>
             <h2>Comportement</h2>
-            <p>
+            <p>Les tortues passent une grande partie de leur vie à se prélasser au soleil, sortant de l'eau pour se réchauffer. 
+                Elles sont lentes et méthodiques dans leurs déplacements, mais peuvent être très habiles dans l'eau. Certaines espèces migrent sur de 
+                longues distances pour pondre leurs œufs sur les plages. Elles sont connues pour leur résistance, pouvant survivre plusieurs mois 
+                sans nourriture dans des conditions extrêmes.
             </p>
             <h2>Conservation</h2>
-            <p>
+            <p>De nombreuses espèces de tortues sont menacées par la pollution, la destruction de leur habitat, la collecte illégale 
+                et le commerce de leurs carapaces. Des initiatives de conservation sont mises en place pour protéger leurs zones de nidification 
+                et les écosystèmes aquatiques dont elles dépendent
             </p>
         </div>
     </div>
