--- a/pages/animaux/marais/ibis.html
+++ b/pages/animaux/marais/ibis.html
@@ -1,27 +1,30 @@
 <div class="container">
     <div class="row row-cols-1 row-cols-lg-2">
         <div class="row">
-            <img class="img-fluid row-cols-lg-12 p-4" src="/images/animaux/jungle/crocodile.jpg"></img>
+            <img class="img-fluid row-cols-lg-12 p-4" src="/images/animaux/marais/Ibis.jpg"></img>
         </div>
         <div class="text-justify text-secondary p-3">
-            <H1></H1>
-            <p><p>
-            <h2>Caractéristiques du Zebre :</h2>   
+            <H1>L'Ibis - Le Voyageur des Zones Humides</H1>
+            <p>L'ibis est un oiseau gracieux et élancé, célèbre pour son bec long et courbé, idéal pour fouiller 
+                la boue à la recherche de nourriture. Il est souvent associé aux environnements marécageux et humides.<p>
+            <h2>Caractéristiques de l'Ibis :</h2>   
             <ul>
-                    <li>Nom scientifique : </li>
-                    <li>Habitat naturel : </li>
-                    <li>Taille : </li>
-                    <li>Poids : </li>
-                    <li>Alimentation : </li>
-                    <li>Espérance de vie : </li>
-                    <li>Mode de vie : </li>
+                    <li>Nom scientifique : Threskiornithidae (famille des ibis)</li>
+                    <li>Habitat naturel : Marais, estuaires et zones humides d'Afrique, d'Amérique et d'Asie</li>
+                    <li>Taille : Environ 70 à 100 cm de hauteur</li>
+                    <li>Poids : 500 à 1 200 g</li>
+                    <li>Alimentation : Omnivore, il se nourrit de petits poissons, crustacés, insectes et matières végétales</li>
+                    <li>Espérance de vie : 15 à 20 ans</li>
                 </ul>
             </p>
             <h2>Comportement</h2>
-            <p>
+            <p>L'ibis est un oiseau sociable qui vit en colonies et effectue souvent des migrations longues pour trouver des habitats adaptés. 
+                Il utilise son long bec pour fouiller les zones humides à la recherche de nourriture. Les ibis communiquent par des vocalisations 
+                et se regroupent pour se nourrir, nidifier et migrer. Leur plumage est souvent coloré, notamment chez les espèces tropicales.
             </p>
             <h2>Conservation</h2>
-            <p>
+            <p>Certaines espèces d'ibis sont menacées par la destruction des zones humides, la pollution et les perturbations humaines. 
+                Des efforts de protection des marais et des réserves ornithologiques aident à protéger ces habitats fragiles et les populations d'ibis.
             </p>
         </div>
     </div>
