--- a/pages/animaux/jungle/perroquet.html
+++ b/pages/animaux/jungle/perroquet.html
@@ -32,4 +32,7 @@
             </p>
         </div>
     </div>
+    <div class="p-3">
+        <button type="button" class="btn btn-secondary"><a href="/jungle">Jungle</a></button>
+    </div>
 </div>
