--- a/pages/animaux/marais/ibis.html
+++ b/pages/animaux/marais/ibis.html
@@ -28,4 +28,7 @@
             </p>
         </div>
     </div>
+    <div class="p-3">
+        <button type="button" class="btn btn-secondary"><a href="/marais">Marais</a></button>
+    </div>
 </div>
