--- a/pages/habitats/marais.html
+++ b/pages/habitats/marais.html
@@ -29,11 +29,11 @@
               </div>
               <div>
                 <img class="w-100 rounded mx-auto d-block" src="/images/animaux/marais/Ibis.jpg" alt="Ibis" height="220px"> 
-                <h2 class="p-3"><a href="/python">Ivoire</br>L'Ibis</a></h2>
+                <h2 class="p-3"><a href="/ibis">Ivoire</br>L'Ibis</a></h2>
               </div>
               <div>
                 <img class="w-100 rounded mx-auto d-block" src="/images/animaux/marais/Tortue.jpg" alt="Tortue" height="220px"> 
-                <h2 class="p-3"><a href="/perroquet">Shelly</br>La Tortue</a></h2>
+                <h2 class="p-3"><a href="/tortue">Shelly</br>La Tortue</a></h2>
               </div>
         </div>
         <div class="row justify-content-evenly p-3">
