--- a/pages/habitats/savane.html
+++ b/pages/habitats/savane.html
@@ -26,7 +26,7 @@
               </div>
               <div>
                 <img class="w-100 rounded mx-auto d-block" src="/images/animaux/savane/Elephant.jpg"alt="Elephant" height="220px"> 
-                <h2 class="p-3"><a href="/jaguard">Kibo</br>L'Elephant</a></h2>
+                <h2 class="p-3"><a href="elephant">Kibo</br>L'Elephant</a></h2>
               </div>
               <div>
                 <img class="w-100 rounded mx-auto d-block" src="/images/animaux/savane/Giraffe.jpg" alt="Girafe" height="220px"> 
