--- a/pages/animaux/Savane/lion.html
+++ b/pages/animaux/Savane/lion.html
@@ -30,4 +30,7 @@
             </p>
         </div>
     </div>
+    <div class="p-3">
+        <button type="button" class="btn btn-secondary"><a href="/savane">Savane</a></button>
+    </div>
 </div>
