--- a/pages/animaux/Savane/zebre.html
+++ b/pages/animaux/Savane/zebre.html
@@ -31,5 +31,8 @@
             </p>
         </div>
     </div>
+    <div class="p-3">
+        <button type="button" class="btn btn-secondary"><a href="/savane">Savane</a></button>
+    </div>
 </div>
 
