--- a/pages/animaux/jungle/python.html
+++ b/pages/animaux/jungle/python.html
@@ -31,4 +31,7 @@
             </p>
         </div>
     </div>
+    <div class="p-3">
+        <button type="button" class="btn btn-secondary"><a href="/jungle">Jungle</a></button>
+    </div>
 </div>
