--- a/pages/animaux/marais/crocodile.html
+++ b/pages/animaux/marais/crocodile.html
@@ -29,4 +29,7 @@
             </p>
         </div>
     </div>
+    <div class="p-3">
+        <button type="button" class="btn btn-secondary"><a href="/marais">Marais</a></button>
+    </div>
 </div>
