Modification pour arriver directement sur l'acceuil

--- a/pages/home.html
+++ b/pages/home.html
@@ -31,7 +31,7 @@
       <article>
         <div class="p-4">
             <h1 class="text-center text-secondary">Présentation</h1>
-            <div class="row row-cols-lg-2 align-items-center">
+            <div class="row  row-cols-1 row-cols-lg-2 align-items-center">
                 <div class="col text-justify text-secondary text-justify p-3">
                     <h2>Bienvenue au Zoo Écoresponsable Arcadia</h2>
                     <p>Plongez au cœur de la nature tout en contribuant à la préservation de notre planète.
