--- a/pages/auth/connexion.html
+++ b/pages/auth/connexion.html
@@ -1,14 +1,18 @@
-<div class="container p-4">
-    <h1 class="p-4 text-center text-secondary">connexion</h1>
-    <form>
-        <div class="mb-3">
+<div class="container py-4">
+  <form>
+      <div class="mb-3">
           <label for="exampleInputEmail1" class="form-label">Username</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" placeholder="mail@email.com">
-        </div>
-        <div class="mb-3">
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+          <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+      </div>
+      <div class="mb-3">
           <label for="exampleInputPassword1" class="form-label">Password</label>
           <input type="password" class="form-control" id="exampleInputPassword1">
-        </div>
-        <button type="submit" class="btn btn-primary text-secondary">Connexion</button>
-      </form>
+      </div>
+      <div class="mb-3 form-check">
+         <input type="checkbox" class="form-check-input" id="exampleCheck1">
+         <label class="form-check-label" for="exampleCheck1">Check me out</label>
+      </div>
+      <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
 </div>
